Fixed some dark mode colors
Maybe disabled double tap zoom

--- a/interface.css
+++ b/interface.css
@@ -93,7 +93,7 @@ div.scroll {
 }
 
 .projectButton:disabled {
-	opacity: 0.4;
+	opacity: 0.6 !important;
 	border: 1px solid #555;
 	cursor: auto;
 }
